Add warning message for mobile user agents

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
         <tbody>
             <tr>
                 <td>
+                    <div id="mobileUA"></div>
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <div id="divInfo">No gesture recognized</div>
                 </td>
             </tr>
